- project file updates for added/removed packages and classes

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,4 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 KurograneTransferDBTool/KurograneTransferDBTool/app.config
+KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/App.config
