--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/Web.config
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/Web.config
@@ -21,7 +21,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation targetFramework="4.5" debug="true" />
+    <compilation targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
