--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/obj/
 KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/bin/
 KuroganeHammer.Data.Core/obj/
 KuroganeHammer.Data.Core/bin/
+KuroganeHammer.Web/KuroganeHammer.Web/bin/
