--- a/KuroganeHammer.Data/KuroganeHammer.Data.Api/packages.config
+++ b/KuroganeHammer.Data/KuroganeHammer.Data.Api/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="jQuery" version="2.2.2" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.15.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net452" />
@@ -13,7 +13,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="1.2.3" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="1.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
@@ -23,13 +23,14 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="1.2.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
@@ -41,9 +42,10 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="WebApiThrottle" version="1.4.3" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
