--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/bin/
 KuroganeHammer.Data.Core/obj/
 KuroganeHammer.Data.Core/bin/
 KuroganeHammer.Web/KuroganeHammer.Web/bin/
+KurograneTransferDBTool/KurograneTransferDBTool/app.config
