--- a/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
+++ b/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
@@ -62,7 +62,10 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\KuroganeHammer.Data\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web" />
   </ItemGroup>
   <Choose>
