--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ KuroganeHammer.Data.Core/obj/
 KuroganeHammer.Data.Core/bin/
 KuroganeHammer.Web/KuroganeHammer.Web/bin/
 KurograneTransferDBTool/KurograneTransferDBTool/app.config
+KuroganeHammer.Data/KuroganeHammer.Data.Api.Tests/App.config
